Fix for bug 248172 (XMLSerializer corrupts namespace prefixes when XHTML namespace is used). r=sicking, sr=jst.