content/html/content/src/nsGenericHTMLElement.cpp
@@ -1661,7 +1661,7 @@ nsGenericHTMLElement::SetAttrAndNotify(PRInt32 aNamespaceID,
   }
   else {
     nsCOMPtr<nsINodeInfo> ni;
-    rv = mNodeInfo->NodeInfoManager()->GetNodeInfo(aAttribute, nsnull,
+    rv = mNodeInfo->NodeInfoManager()->GetNodeInfo(aAttribute, aPrefix,
                                                    aNamespaceID,
                                                    getter_AddRefs(ni));
     NS_ENSURE_SUCCESS(rv, rv);
